# drf-tutorial

./: .gitignore  pyproject.toml
tutorial/: db.sqlite3
tutorial/snippets/: models.py  serializers.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
tutorial/tutorial/: settings.py
