[tool.poetry]
name = "drf-tutorial"
version = "0.1.0"
description = "Walkthrough of Tom Christie's official Django Rest Framework tutorials done by Charlie Zhang."
authors = ["Charlie Zhang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
djangorestframework = "^3.9"
pygments = "^2.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
